init Api Model, TaiSan và thongtinxe

--- a/src/GSoft.AbpZeroTemplate.Web.Host/appsettings.json
+++ b/src/GSoft.AbpZeroTemplate.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-AAJHVMV; Database=DbCNPMCS; Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-AAJHVMV; Database=DbQLX; Trusted_Connection=True;"
 
   },
   "AbpZeroLicenseCode": "LicenseCodePlaceHolderToReplace",
