--- a/src/GSoft.AbpZeroTemplate.Web.Mvc/appsettings.json
+++ b/src/GSoft.AbpZeroTemplate.Web.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-AAJHVMV; Database=DbCNPMCS; Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-HRGJHTF; Database=DbCNPMCS; Trusted_Connection=True;"
   },
   "AbpZeroLicenseCode": "LicenseCodePlaceHolderToReplace",
   "Abp": {
