--- a/src/GSoft.AbpZeroTemplate.Web.Host/GSoft.AbpZeroTemplate.Web.Host.csproj
+++ b/src/GSoft.AbpZeroTemplate.Web.Host/GSoft.AbpZeroTemplate.Web.Host.csproj
@@ -54,6 +54,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="Abp.Castle.Log4Net" Version="3.7.2" />
+    <PackageReference Include="Quartz" Version="3.0.7" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
