--- a/src/GWebsite.AbpZeroTemplate.Application/GWebsite.AbpZeroTemplate.Application.csproj
+++ b/src/GWebsite.AbpZeroTemplate.Application/GWebsite.AbpZeroTemplate.Application.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GSoft.AbpZeroTemplate.Application.Shared\GSoft.AbpZeroTemplate.Application.Shared.csproj" />
     <ProjectReference Include="..\GSoft.AbpZeroTemplate.Core\GSoft.AbpZeroTemplate.Core.csproj" />
     <ProjectReference Include="..\GWebsite.AbpZeroTemplate.Application.Share\GWebsite.AbpZeroTemplate.Application.Share.csproj" />
