--- a/src/GWebsite.AbpZeroTemplate.Core/GWebsite.AbpZeroTemplate.Core.csproj
+++ b/src/GWebsite.AbpZeroTemplate.Core/GWebsite.AbpZeroTemplate.Core.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\GSoft.AbpZeroTemplate.Core.Shared\GSoft.AbpZeroTemplate.Core.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.0.7" />
+  </ItemGroup>
+
 </Project>
