--- a/src/GWebsite.AbpZeroTemplate.Web.Core/GWebsite.AbpZeroTemplate.Web.Core.csproj
+++ b/src/GWebsite.AbpZeroTemplate.Web.Core/GWebsite.AbpZeroTemplate.Web.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.0" />
     <PackageReference Include="Abp.AspNetZeroCore.Web" Version="1.1.3" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.2.4" />
+    <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GSoft.AbpZeroTemplate.Application.Shared\GSoft.AbpZeroTemplate.Application.Shared.csproj" />
+    <ProjectReference Include="..\GSoft.AbpZeroTemplate.EntityFrameworkCore\GSoft.AbpZeroTemplate.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\GWebsite.AbpZeroTemplate.Application\GWebsite.AbpZeroTemplate.Application.csproj" />
   </ItemGroup>
 
